fix: aligned the position of the slider elements

--- a/webdev/style.css
+++ b/webdev/style.css
@@ -24,7 +24,7 @@ a {
     outline: none;
 }
 
-.wrapper {    
+.wrapper {
     display: flex;
     flex-direction: column;
     min-height: 100%;
@@ -116,12 +116,12 @@ a {
 
 .main-banner {
     position: absolute;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  width: 1600px;
-  height: 744px;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 1600px;
+    height: 744px;
     background-image: url('./assets/bg-image.png');
     background-repeat: no-repeat;
 }
@@ -138,7 +138,7 @@ a {
 
 .main-banner__title {
     padding-left: 5px;
-    height: 75px;    
+    height: 75px;
     font-weight: 700;
     font-size: 64px;
     letter-spacing: 4.5px;
@@ -150,7 +150,7 @@ a {
 .main-banner__text {
     margin-top: 23px;
     width: 504px;
-    height: 50px;    
+    height: 50px;
     font-weight: 400;
     font-size: 18px;
     line-height: 140%;
@@ -174,7 +174,7 @@ a {
     outline: 0;
 }
 
-.main-banner__button:hover {
+.button:hover {
     background: #009CC2;
 }
 
@@ -227,7 +227,7 @@ a {
     width: 380px;
     font-weight: bold;
     font-size: 24px;
-    line-height: 28px;
+    line-height: 29px;
     letter-spacing: 1px;
     text-transform: uppercase;
     color: #373737;
@@ -245,10 +245,14 @@ a {
     padding-top: 120px;
     width: 407px;
     height: 582px;
-    margin-left: 240px;
+    margin-left: 248px;
 }
 
+.page-2__btn {
+    margin-top: 6px;
+}
 
+/*************** PAGE2 */
 .page-3 {
     position: relative;
     width: 100%;
@@ -266,67 +270,96 @@ a {
     left: 269px;
     width: 298px;
     height: 175px;
-  }
+}
 
-  .page-3__title {
-    margin: 20px 0 0;
+.page-3__title {
+    margin: 20px 0 0 2px;
     font-size: 16px;
     font-weight: 500;
     color: #373737;
     letter-spacing: 2.4px;
     text-transform: uppercase;
-  }
-  .page-3__text {
+}
+
+.page-3__text {
     font-size: 14px;
     font-weight: 400;
     color: #4e4e4e;
     text-align: center;
-    line-height: 19.6px;
+    line-height: 20px;
     margin-top: 12px;
-  }
+}
+
 /* Slider  */
 .page-3-slider {
     position: absolute;
-    top: 120px;
+    top: 106px;
     left: 706px;
     height: 244px;
-  }
-  .page-3-slider__list {
+}
+
+.page-3-slider__list {
     display: flex;
     padding-left: 0;
-  }
-  .page-3-slider__item {
+}
+
+.page-3-slider__item {
     width: 407px;
     height: 244px;
     margin-right: 30px;
-  }
-  .page-3-slider__item:hover {
+    
+}
+
+.page-3-slider__item:hover {
     cursor: pointer;
-  }
-  .page-3-slider-nav {
+}
+
+.page-3-slider-nav {
     position: absolute;
     top: 80px;
     right: 275px;
     display: flex;
     width: 79px;
     height: 20px;
-  }
-  .page-3-slider-nav > img,
-  .page-3-slider-nav > span {
+}
+
+
+.slider-nav__arrow-right,
+.slider-nav__arrow-left
+ {
+    margin-top: 3px;
+}
+
+.slider-nav__arrow-right {
+    margin-left: 11px !important;
+}
+
+
+.slider-nav__arrow-left {
+    padding-right: 12px !important;
+
+}
+
+.page-3-slider-nav>img,
+.page-3-slider-nav>span {
     display: block;
-  }
-  .page-3-slider-nav > img:hover {
+}
+
+.page-3-slider-nav>img:hover {
     cursor: pointer;
     opacity: .5;
-  }
-  .page-3-slider-nav > span {
+}
+
+.page-3-slider-nav>span {
     font-size: 18px;
     font-weight: 400;
     color: #373737;
-  }
-  .page-3-slider-nav__item {
-    padding: 0 3px;
-  }
+}
+
+.page-3-slider-nav__item {
+    padding: 0 2px;
+    margin-right: 0 !important;
+}
 
 
 /*************** PAGE4 */
